Create OneToMany Relationship between Dance Course and Instructor. Closes #32.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Dance_School_JPA_APP
 server.port=8095
 
 #MYSQL Config
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/Dance_School_JPA_App?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
