--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
             <artifactId>mysql</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <!--Testcontainers Rest-Assured-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
