Refractor methods in Dancer Service and Controller. Closes #55.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Dance_School_JPA_APP
 
-server.port=8095
+server.port=8092
 
 #MYSQL Config
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/Dance_School_JPA_App?createDatabaseIfNotExist=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/Dance_School_JPA_App2?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
